--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </ul>
       </div>
       <div class="profile-images">
-        <img src="images/photo1.jpg" alt="サブ画像1" />
-        <img src="images/photo2.jpg" alt="サブ画像2" />
+        <img src="photo1.jpg" alt="サブ画像1" />
+        <img src="photo2.jpg" alt="サブ画像2" />
       </div>
     </section>
 
